--- a/vignettes/scenario-builder.Rmd
+++ b/vignettes/scenario-builder.Rmd
@@ -16,6 +16,8 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
+ # CRAN limite CPU usage
+data.table::setDTthreads(2)
 library(antaresEditObject)
 ```
 
