Add vignette 'Edit geographic trimming'

--- a/vignettes/antaresEditObject.Rmd
+++ b/vignettes/antaresEditObject.Rmd
@@ -301,3 +301,57 @@ writeInputTS(area = my_area,
             opts = opts
 )
 ```
+
+## Edit geographic trimming
+
+```r
+# set the path to an Antares study
+my_study <- file.path("", "", "")
+opts <- setSimulationPath(my_study, simulation ="input")
+
+# choose geographic trimming when creating new Antares areas
+initial_filtering_synthesis <- c("hourly")
+initial_filtering_year_by_year <- c("daily")
+
+opts <- createArea("area1",
+                   filtering = filteringOptions(
+                     filter_synthesis = initial_filtering_synthesis,
+                     filter_year_by_year = initial_filtering_year_by_year),
+                   opts = opts)
+opts <- createArea("area2",opts = opts)
+opts <- createLink(from = "area1", 
+                   to = "area2", 
+                   propertiesLink = propertiesLinkOptions(
+                     filter_synthesis = initial_filtering_synthesis,
+                     filter_year_by_year = initial_filtering_year_by_year),
+                   opts = opts)
+
+# check the initial filters
+initial_GT <- getGeographicTrimming(areas="area1",links=TRUE,opts=opts)
+print(initial_GT$areas[["area1"]])
+print(initial_GT$links[["area1 - area2"]])
+
+# edit geographic trimming of an existing area or link
+new_filtering_synthesis <- c("weekly")
+new_filtering_year_by_year <- c("monthly")
+
+editArea("area1", 
+         filtering = filteringOptions(
+           filter_synthesis = new_filtering_synthesis,
+           filter_year_by_year = new_filtering_year_by_year),
+         opts = opts)
+editLink(from = "area1",
+         to = "area2",
+         filter_year_by_year = new_filtering_year_by_year,
+         filter_synthesis = new_filtering_synthesis,
+         opts = opts) 
+
+# check the new filters
+new_GT <- antaresRead::getGeographicTrimming(areas="area1",links=TRUE,opts=opts)
+print(new_GT$areas[["area1"]])
+print(new_GT$links[["area1 - area2"]])
+
+# important : make sure that `geographic-trimming` parameter is activated in general settings
+opts <- updateGeneralSettings(geographic.trimming = TRUE)
+```
+
