pkgdown build_site() fix warnings vignette

--- a/vignettes/Antares_new_features_v860.Rmd
+++ b/vignettes/Antares_new_features_v860.Rmd
@@ -2,7 +2,7 @@
 title: "Antares new features v8.6.0"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Antares_new_features_v860}
+  %\VignetteIndexEntry{Antares new features v8.6.0}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
