--- a/vignettes/api-variant-management.Rmd
+++ b/vignettes/api-variant-management.Rmd
@@ -107,7 +107,7 @@ writeVariantCommands("path/to/commands.json")
 Below are listed all functions from {antaresEditObject} that can be used with the API. These functions will include the following badge in their documentation:
 
 ```{r, echo=FALSE}
-knitr::include_graphics("../man/figures/badge_api_ok.svg")
+knitr::include_graphics("figures/badge_api_ok.svg")
 ```
 
 
