--- a/vignettes/Antares_new_features_v920.Rmd
+++ b/vignettes/Antares_new_features_v920.Rmd
@@ -63,11 +63,13 @@ We can create new clusters, st-storage (from v8.6), with function `createCluster
 
 By default you can call function only with two parameters (`area`, `cluster_name`). 
 
-### No restriction on group names
+Clusters are created with default properties and time series.
+
+### Dynamic group names
 
 Default `group` is still "Other1" and now you can **create/edit** your own group name (*only for version study >= 9.2*).
 
-```{r st-storage}
+```{r st-storage/group}
 # creation
 createClusterST(area = "fr", 
                 cluster_name = "test_storage", 
@@ -82,7 +84,117 @@ editClusterST(area = "fr",
               cluster_name = "test_storage", 
               group = "my_own_group_Pondage")
 
+# read cluster properties
+tab <- readClusterSTDesc()
+rmarkdown::paged_table(tab)
+```
+### New properties
+
+you can create or edit new clusters with new properties (see doc `?createClusterST`). 
+
+```{r default values}
+# new properties (default values)
+rmarkdown::paged_table(as.data.frame(storage_values_default(), check.names = FALSE))
+```
+
+```{r creation/properties}
+# creation
+my_parameters <- storage_values_default()
+my_parameters$efficiencywithdrawal <- 0.5
+my_parameters$`penalize-variation-injection` <- TRUE
+my_parameters$`penalize-variation-withdrawal` <- TRUE
+
+createClusterST(area = "fr", 
+                cluster_name = "test_storage", 
+                group = "new_properties", 
+                storage_parameters = my_parameters, 
+                overwrite = TRUE)
+
+createClusterST(area = "it", 
+                cluster_name = "test_storage", 
+                group = "new_properties", 
+                storage_parameters = my_parameters,
+                overwrite = TRUE)
+
 # read cluster properties 
+tab <- readClusterSTDesc()
+rmarkdown::paged_table(tab)
+```
+
+```{r edit/properties}
+# edit properties of existing st-storage cluster
+my_parameters$efficiencywithdrawal <- 0.9
+my_parameters$`penalize-variation-injection` <- FALSE
+my_parameters$`penalize-variation-withdrawal` <- FALSE
+
+editClusterST(area = "fr", 
+              cluster_name = "test_storage",
+              storage_parameters = my_parameters)
+
+# read cluster properties 
+tab <- readClusterSTDesc()
+rmarkdown::paged_table(tab)
+```
+
+### New optional **time series**
+
+We have five new *.txt* files containing one series of dimension ${N=8760, P=1}$ :  
+
+  - cost-injection.txt  
+  - cost-withdrawal.txt 
+  - cost-level.txt  
+  - cost-variation-injection.txt  
+  - cost-variation-withdrawal.txt
+  
+
+```{r create/ts}
+# creation
+ratio_value <- matrix(0.7, 8760)
+  
+# default properties with new optional TS
+createClusterST(area = "fr", 
+                cluster_name = "good_ts_value", 
+                cost_injection = ratio_value, 
+                cost_withdrawal = ratio_value, 
+                cost_level = ratio_value, 
+                cost_variation_injection = ratio_value,
+                cost_variation_withdrawal = ratio_value)
+
+# read cluster TS values 
+tab <- readInputTS(st_storage = "all", 
+                   showProgress = FALSE)
+rmarkdown::paged_table(head(tab))
+```
+
+```{r edit/ts}
+# edit TS values of existing st-storage cluster
+new_ratio_value <- matrix(0.85, 8760)
+
+# edit everything or anyone you want 
+editClusterST(area = "fr",
+              cluster_name = "good_ts_value",
+              cost_injection = new_ratio_value, 
+              cost_withdrawal = new_ratio_value)
+
+# read cluster TS values 
+tab <- readInputTS(st_storage = "all", 
+                   showProgress = FALSE)
+rmarkdown::paged_table(head(tab))
+```
+
+### Remove clusters
+
+Nothing has changed to remove clusters.
+
+```{r remove}
+# read cluster names
+levels(readClusterSTDesc()$cluster)
+
+# remove a cluster
+removeClusterST(area = "fr", 
+                cluster_name = "good_ts_value")
+
+# read cluster 
 tab <- readClusterSTDesc()
 rmarkdown::paged_table(tab)
 ```
@@ -94,3 +206,8 @@ unlink(current_study_opts$studyPath,
 # clean global options
 options(antares = NULL)
 ```
+
+
+
+
+
