update pkgdown site with bootstrap 5 + fix some warnings about vignette

--- a/vignettes/Antares_new_features_v860.Rmd
+++ b/vignettes/Antares_new_features_v860.Rmd
@@ -228,14 +228,14 @@ Full documentation is available in the function `writeInputTS()`. We will see fu
 
 Checks depends of values of parameters in `hydro.ini` file.
 
-```{r schema combinatoire , echo=FALSE, fig.cap="", out.width = '50%', fig.align='center'}
-knitr::include_graphics("schemas/mingen_hydro_rules.png")
+```{r schema combinatoire , echo=FALSE, fig.cap="", out.width = '40%', fig.alt="hydro params", fig.align='center'}
+knitr::include_graphics("mingen_hydro_rules.png")
 ```
 
-```{r schema, echo=FALSE, fig.cap="", out.width = '75%', fig.align='center'}
+```{r schema, echo=FALSE, fig.cap="", out.width = '100%', fig.alt="mingen schema", fig.align='center'}
 # path_image <- sourcedir860 <- system.file("doc/schemas", package = "antaresEditObject")
 # knitr::include_graphics(file.path(path_image,"mingen.png"))
-knitr::include_graphics("schemas/mingen_draw.png")
+knitr::include_graphics("mingen_draw.png")
 ```
 
 After creating study, `.txt` files containing time series are empty. We will describe steps to edit `mingen.txt`.  
